==============================


Not yet released - available from SVN or in the latest snapshot:
----------------------------------------------------------------

Enhancements:

Feature request 3030479: New global preference that allows scrollable tabbed pane for Session tabs.

Graph Plugin: Multiple tables can now be selected and moved simultanously
  Thanks to Markus Schulz for the patch.


Bug-fixes:

Bug 3055859: Regular expressions did not work in find & replace dialog


3.2.0 (11/21/2010)
==================

Enhancements:

Updated Translations:
 - Chinese (Thanks to xpdz)
 - French  (Thanks to Erwan DUROSELLE)
 
SQL Scripts Plugin:
  New preference that allows to choose the escape string for new lines. See Global Preferences --> Tab SQL Scripts
  (See patch #3079664 by Paul Wagland)

Hibernate Plugin:
  - New handling of limiting object count for HQL queries. This may prevent severe performance problems.
    Formerly the limit was set more or less under the hood (SQL limit was used).
    Setting the limit can cause the performance problems.  
  - Hibernate session can now be started in an external process.
    This can keep SQuirreL from running into memory problems when working with the Hibernate Plugin.
    See Hibernate configuration panel for details. 

Introduced a new general data type property 'Use column labels instead of column names in result headers'.
See Global Preferences --> Tab 'Data Type Controls'. Will be useful e.g. for MySQL if Aliases are used in Select clauses.

Session Property: "Keep SQL result table layout on rerun SQL"
If this option is checked the layout of the table of a SQL result is tried to be restored after rerunning the SQL.
Note: You rerun an SQL statement when you click the running man button on the upper left of a SQL result.

New way to view query results: There is a new tab inside a query result named "Overview".
It might need some trying out to understand what it does.  
