@@ -91,6 +91,10 @@ public class SessionPropertiesBeanInfo extends SimpleBeanInfo
 							"getSQLExecutionTabPlacement", "setSQLExecutionTabPlacement"),
 						new PropertyDescriptor(IPropNames.SQL_RESULTS_TAB_PLACEMENT, SessionProperties.class,
 							"getSQLResultsTabPlacement", "setSQLResultsTabPlacement"),
+						new PropertyDescriptor(IPropNames.SQL_USE_FETCH_SIZE, SessionProperties.class,
+							"getSQLFetchSize", "setSQLFetchSize"),
+						new PropertyDescriptor(IPropNames.SQL_FETCH_SIZE, SessionProperties.class,
+							"getSQLUseFetchSize", "setSQLUseFetchSize"),
 						new PropertyDescriptor(IPropNames.TABLE_CONTENTS_OUTPUT_CLASS_NAME,
 							SessionProperties.class, "getTableContentsOutputClassName",
 							"setTableContentsOutputClassName"),
