@@ -129,6 +129,8 @@ public class SessionSQLPropertiesPanel
 		private JCheckBox _commitOnClose = new JCheckBox(s_stringMgr.getString("SessionSQLPropertiesPanel.commitonclose"));
 		private IntegerField _sqlNbrRowsToShowField = new IntegerField(5);
 		private JCheckBox _sqlLimitRowsChk = new JCheckBox(s_stringMgr.getString("SessionSQLPropertiesPanel.limitrows"));
+		private JCheckBox _sqlFetchSizeChk = new JCheckBox(s_stringMgr.getString("SessionSQLPropertiesPanel.fetchSize"));
+		private IntegerField _sqlFetchSizeField = new IntegerField(5);
 		private JTextField _stmtSepField = new JTextField(5);
 		private JTextField _solCommentField = new JTextField(2);
       // i18n[SessionSQLPropertiesPanel.removeMultiLineComment=Remove multi line comment (/*...*/) from SQL before sending to database]
@@ -172,7 +174,8 @@ public class SessionSQLPropertiesPanel
 			_commitOnClose.setSelected(props.getCommitOnClosingConnection());
 			_sqlNbrRowsToShowField.setInt(props.getSQLNbrRowsToShow());
 			_sqlLimitRowsChk.setSelected(props.getSQLLimitRows());
-
+			_sqlFetchSizeChk.setSelected(props.getSQLUseFetchSize());
+			_sqlFetchSizeField.setInt(props.getSQLFetchSize());
 
          if(null != _session)
          {
@@ -247,6 +250,9 @@ public class SessionSQLPropertiesPanel
 			props.setCommitOnClosingConnection(_commitOnClose.isSelected());
 			props.setSQLNbrRowsToShow(_sqlNbrRowsToShowField.getInt());
 			props.setSQLLimitRows(_sqlLimitRowsChk.isSelected());
+			props.setSQLFetchSize(_sqlFetchSizeField.getInt());
+			props.setSQLUseFetchSize(_sqlFetchSizeChk.isSelected());
+			
 			props.setSQLStatementSeparator(_stmtSepField.getText());
 			props.setStartOfLineComment(_solCommentField.getText());
          props.setRemoveMultiLineComment(_removeMultiLineComment.isSelected());
@@ -276,6 +282,8 @@ public class SessionSQLPropertiesPanel
 			_commitOnClose.setEnabled(!_autoCommitChk.isSelected());
 
 			_sqlNbrRowsToShowField.setEnabled(_sqlLimitRowsChk.isSelected());
+
+         _sqlFetchSizeField.setEnabled(_sqlFetchSizeChk.isSelected());
 
          _limitSQLResultTabsField.setEnabled(_limitSQLResultTabsChk.isSelected());
 
@@ -315,6 +323,7 @@ public class SessionSQLPropertiesPanel
 
 			_autoCommitChk.addChangeListener(_controlMediator);
 			_sqlLimitRowsChk.addChangeListener(_controlMediator);
+			_sqlFetchSizeChk.addChangeListener(_controlMediator);
 			_sqlNbrRowsToShowField.setColumns(5);
 			_stmtSepField.setColumns(5);
 
@@ -346,6 +355,27 @@ public class SessionSQLPropertiesPanel
 			++gbc.gridx;
 			gbc.gridwidth = GridBagConstraints.REMAINDER;
 			pnl.add(new JLabel(s_stringMgr.getString("SessionSQLPropertiesPanel.rows")), gbc);
+			
+			
+			// Show fetchSize-Option
+			++gbc.gridy; // new line
+			gbc.gridx = 0;
+			gbc.gridwidth = 2;
+			pnl.add(_sqlFetchSizeChk, gbc);
+			gbc.gridwidth = 1;
+			gbc.gridx+=2;
+			pnl.add(_sqlFetchSizeField, gbc);
+			++gbc.gridx;
+			gbc.gridwidth = GridBagConstraints.REMAINDER;
+			pnl.add(new JLabel(s_stringMgr.getString("SessionSQLPropertiesPanel.rows")), gbc);
+			
+			
+			
+			
+			
+			
+			
+			
 
          ++gbc.gridy; // new line
          gbc.gridx = 0;
