@@ -4,6 +4,7 @@ SessionSQLPropertiesPanel.autocommit=Auto Commit SQL
 SessionSQLPropertiesPanel.commitonclose=Commit On Closing Session
 SessionSQLPropertiesPanel.font=Font
 SessionSQLPropertiesPanel.limitrows=SQL results - Limit rows
+SessionSQLPropertiesPanel.fetchSize=Fetch Rows at once
 SessionSQLPropertiesPanel.limitsqlhistorysize=Limit SQL History Combo Size
 SessionSQLPropertiesPanel.rows=rows
 SessionSQLPropertiesPanel.sharesqlhistory=Share SQL History
